ya izmenil header i footer

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -19,13 +19,13 @@
             <div class="header-top">
                 <div class="header-left">
                     <div class="logo">
-                        <a href="#"><img src="./img/c_saka-logo-vectörel-1 1.png" alt=""></a>
+                        <a href="#"><img src="./img/c_saka-logo-vectörel-1 1.png" alt="" /></a>
                     </div>
 
                     <div class="sponsors-logo">
-                        <a href="#"><img src="./img/sponsor1.png" alt=""></a>
-                        <a href="#"><img src="./img/sponsor2.png" alt=""></a>
-                        <a href="#"><img src="./img/sponsor3.png" alt=""></a>
+                        <a href="#"><img src="./img/sponsor1.png" alt="" /></a>
+                        <a href="#"><img src="./img/sponsor2.png" alt="" /></a>
+                        <a href="#"><img src="./img/sponsor3.png" alt="" /></a>
                     </div>
 
                     <div class="add-text">
@@ -35,7 +35,7 @@
 
                 <div class="header-right">
                     <div class="cart">
-                        <a href="#"><img src="./img/cart.png" alt=""></a>
+                        <a href="#"><img src="./img/cart.png" alt="" /></a>
                     </div>
 
                     <div class="log-in">
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="hamburger__menu none">
-                    <input type="checkbox" class="hamburger-chek" id="hamburger-chek">
+                    <input type="checkbox" class="hamburger-chek" id="hamburger-chek" />
                     <label for="hamburger-chek" id="hamburger-chek" class="hamburger">
                         <span class="burger-line-long"></span>
                         <span class="burger-line-long"></span>
@@ -60,7 +60,6 @@
                     </label>
                 </div>
             </div>
-            
 
             <div class="header-row">
                 <ul class="nav-list">
@@ -411,64 +410,61 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="footer-top">
-            <div class="footer-container">
-                <div class="footer-logo">
-                    <img src="img/c_saka-logo-vectörel-1 1.png" alt="">
-                </div>
-
-                <ul class="footer-nav">
-                    <h2>Навигация</h2>
-                    <li><a href="#">Каталог</a></li>
-                    <li><a href="#">О компании</a></li>
-                    <li><a href="#">Новости</a></li>
-                    <li><a href="#">Доставка и оплата</a></li>
-                    <li><a href="#">Контакты</a></li>
-                    <li><a href="#">Корзина</a></li>
-                </ul>
-
-                <ul class="footer-info">
-                    <h2>Информация</h2>
-                    <li><a href="#">Помощь</a></li>
-                    <li><a href="#">Блог</a></li>
-                    <li><a href="#">Вопрос-ответ</a></li>
-                    <li><a href="#">Политика конфиденциальности</a></li>
-                    <li><a href="#">Карта сайта</a></li>
-                </ul>
-
-                <div class="footer-last">
-                    <h2>Следите за новостями</h2>
-
-                    <form class="send-email">
-                        <input type="email" placeholder="Ваш E-mail" required>
-                        <button class="btn--mail" type="submit">Отправить</button>
-                    </form>
-
-                    <div class="footer-phone">
-                        <span>+90 212 547 08 26</span>
+        <div class="footer__top">
+            <div class="footer__logo">
+                <a href="#">
+                    <img src="./img/logoes/head-logo.png" alt="" />
+                </a>
+            </div>
+            <ul class="footer__list">
+                <h2>Навигация</h2>
+                <li><a href="#">Каталог</a></li>
+                <li><a href="#">О компании</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Доставка и оплата</a></li>
+                <li><a href="#">Контакты</a></li>
+                <li><a href="#">Корзина</a></li>
+            </ul>
+            <ul class="footer__list two">
+                <h2>Информация</h2>
+                <li><a href="#">Помощь</a></li>
+                <li><a href="#">Блог</a></li>
+                <li><a href="#">Вопрос-ответ</a></li>
+                <li><a href="#">Политика конфиденциальности</a></li>
+                <li><a href="#">Карта сайта</a></li>
+            </ul>
+            <div class="footer__last">
+                <div class="top">
+                    <h3>Следите за новостями</h3>
+                    <div class="search">
+                        <input type="email" placeholder="Ваш E-mail" />
+                        <button class="btn">
+                            <a href="#">Отправить</a>
+                        </button>
                     </div>
+                </div>
+                <div class="bottom">
+                    <img src="./img/logoes/PhoneCall.png" alt="" />
+                    <p>+90 212 547 08 26</p>
                 </div>
             </div>
         </div>
 
         <div class="line"></div>
 
-        <div class="footer-row">
-            <div class="footer-container">
-                <div class="footer-left">
-                    <h2>Напишите нам,
-                        мы онлайн:</h2>
-
-                    <div class="socials">
-                        <a href="#"><img src="img/soc1.svg" alt=""></a>
-                        <a href="#"><img src="img/soc2.svg" alt=""></a>
-                        <a href="#"><img src="img/soc3.svg" alt=""></a>
-                        <a href="#"><img src="img/soc4.svg" alt=""></a>
+        <div class="footer__bottom">
+            <div class="footer__nav">
+                <div class="footer__left">
+                    <p>Напишите нам, мы онлайн:</p>
+                    <div class="flex">
+                        <a href="#"><img src="./img/logoes/VK.png" alt="" /></a>
+                        <a href="#"><img src="./img/logoes/WhatsApp.png" alt="" /></a>
+                        <a href="#"><img src="./img/logoes/Telegram.png" alt="" /></a>
+                        <a href="#"><img src="./img/logoes/Instagram.png" alt="" /></a>
                     </div>
                 </div>
-
-                <div class="footer-right">
-                    <span>Copyright © 2023 Сака Текстиль. Все права защищены.</span>
+                <div class="footer__right">
+                    <p>Copyright © 2023 Сака Текстиль. Все права защищены.</p>
                 </div>
             </div>
         </div>
